[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "email-validator>=2.3.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "grpcio>=1.74.0",
    "gunicorn>=23.0.0",
    "kubernetes>=33.1.0",
    "paho-mqtt>=2.1.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "aiohttp>=3.12.15",
    "psutil>=7.0.0",
    "trafilatura>=2.0.0",
]
